// Copyright 2021 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package flex;

option go_package = "github.com/nya3jp/flex";

import "google/protobuf/duration.proto";

message Job {
  JobId id = 1;
  JobSpec spec = 2;
}

message JobId {
  int64 int_id = 1;
}

message JobSpec {
  JobCommand command = 1;
  JobInputs inputs = 2;
  JobLimits limits = 3;
  JobConstraints constraints = 4;
}

message JobInputs {
  repeated JobPackage packages = 1;
}

message JobPackage {
  PackageId id = 1;
  string install_dir = 2;
}

message JobConstraints {
  int32 priority = 1;
}

message JobStatus {
  Job job = 1;
  JobState state = 2;
  TaskId task_id = 3;
  FlexletId flexlet_id = 4;
  TaskResult result = 5;
}

enum JobState {
  UNSPECIFIED = 0;
  PENDING = 1;
  RUNNING = 2;
  FINISHED = 3;
}

message Package {
  PackageId id = 1;
  PackageSpec spec = 2;
}

message PackageId {
  string hash = 1;
  string tag = 2;
}

message PackageSpec {
}

message FlexletStatus {
  Flexlet flexlet = 1;
  FlexletState state = 2;
}

message Flexlet {
  FlexletId id = 1;
  FlexletSpec spec = 2;
}

message FlexletId {
  string name = 1;
}

message FlexletSpec {
  int64 cores = 1;
}

enum FlexletState {
  DOWN = 0;
  UP = 1;
}

message JobCommand {
  repeated string args = 1;
}

message JobLimits {
  google.protobuf.Duration time = 1;
}

message TaskResult {
  int32 exit_code = 1;
  string message = 2;
  google.protobuf.Duration time = 3;
}

message FileLocation {
  string canonical_url = 1;
  string presigned_url = 2;
}

message TaskId {
  string uuid = 1;
}
