// Copyright 2021 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package flex;

option go_package = "github.com/nya3jp/flex";

import "flex.proto";

service FlexService {
  rpc SubmitJob(SubmitJobRequest) returns (SubmitJobResponse) {}
  rpc CancelJob(CancelJobRequest) returns (CancelJobResponse) {}
  rpc GetJob(GetJobRequest) returns (GetJobResponse) {}
  rpc GetJobOutput(GetJobOutputRequest) returns (GetJobOutputResponse) {}
  rpc ListJobs(ListJobsRequest) returns (ListJobsResponse) {}

  rpc InsertPackage(stream InsertPackageRequest) returns (InsertPackageResponse) {}
  rpc GetPackage(GetPackageRequest) returns (GetPackageResponse) {}

  rpc UpdateTag(UpdateTagRequest) returns (UpdateTagResponse) {}
  rpc ListTags(ListTagsRequest) returns (ListTagsResponse) {}

  rpc ListFlexlets(ListFlexletsRequest) returns (ListFlexletsResponse) {}

  rpc GetStats(GetStatsRequest) returns (GetStatsResponse) {}
}

message SubmitJobRequest {
  JobSpec spec = 1;
}

message SubmitJobResponse {
  JobId id = 1;
}

message CancelJobRequest {
  JobId id = 1;
}

message CancelJobResponse {
}

message GetJobRequest {
  JobId id = 1;
}

message GetJobResponse {
  JobStatus job = 1;
}

message GetJobOutputRequest {
  JobId id = 1;
  enum JobOutputType {
    STDOUT = 0;
    STDERR = 1;
  }
  JobOutputType type = 2;
}

message GetJobOutputResponse {
  FileLocation location = 1;
}

message ListJobsRequest {
  int64 limit = 1;
  JobId before_id = 2;
  JobState state = 3;
}

message ListJobsResponse {
  repeated JobStatus jobs = 1;
}

message InsertPackageRequest {
  oneof type {
    PackageSpec spec = 1;
    bytes data = 2;
  }
}

message InsertPackageResponse {
  PackageId id = 1;
}

message GetPackageRequest {
  PackageId id = 1;
}

message GetPackageResponse {
  Package package = 1;
}

message UpdateTagRequest {
  string tag = 1;
  string hash = 2;
}

message UpdateTagResponse {}

message ListTagsRequest {
}

message ListTagsResponse {
  repeated PackageId tags = 1;
}

message ListFlexletsRequest {}

message ListFlexletsResponse {
  repeated FlexletStatus flexlets = 1;
}

message GetStatsRequest {}

message GetStatsResponse {
  Stats stats = 1;
}
